Updated docs and EventStreamProvider

--- a/CommandsAndEvents.Eventstore/CommandsAndEvents.Eventstore.csproj
+++ b/CommandsAndEvents.Eventstore/CommandsAndEvents.Eventstore.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandsAndEvents" Version="1.0.1" />
     <PackageReference Include="EventStore.Client" Version="5.0.1" />
   </ItemGroup>
 
