--- a/CommandsAndEvents/CommandsAndEvents.csproj
+++ b/CommandsAndEvents/CommandsAndEvents.csproj
@@ -9,12 +9,20 @@
     <PackageLicenseUrl>https://github.com/swmal/CommandsAndEvents/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/swmal/CommandsAndEvents</PackageProjectUrl>
     <RepositoryUrl>https://github.com/swmal/CommandsAndEvents</RepositoryUrl>
-    <Version>1.0.2</Version>
+    <Version>1.0.5</Version>
     <PackageTags>DDD, Commands, Events</PackageTags>
+    <AssemblyVersion>1.0.5.0</AssemblyVersion>
+    <FileVersion>1.0.5.0</FileVersion>
+    <PackageReleaseNotes>Removed protected constructor on commandhandler.
+Improved documentation, autoregistration of eventhandlers.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="NuGet.CommandLine" Version="4.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
