--- a/CommandsAndEvents/CommandsAndEvents.csproj
+++ b/CommandsAndEvents/CommandsAndEvents.csproj
@@ -4,17 +4,16 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <Authors>swmal</Authors>
     <Company />
-    <Description>A library supporting commands and domain events for aggregate roots.</Description>
+    <Description>A library for .NET Core supporting commands and domain events for aggregate roots.</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseUrl>https://github.com/swmal/CommandsAndEvents/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/swmal/CommandsAndEvents</PackageProjectUrl>
     <RepositoryUrl>https://github.com/swmal/CommandsAndEvents</RepositoryUrl>
-    <Version>1.0.5</Version>
+    <Version>1.0.7</Version>
     <PackageTags>DDD, Commands, Events</PackageTags>
-    <AssemblyVersion>1.0.5.0</AssemblyVersion>
-    <FileVersion>1.0.5.0</FileVersion>
-    <PackageReleaseNotes>Removed protected constructor on commandhandler.
-Improved documentation, autoregistration of eventhandlers.</PackageReleaseNotes>
+    <AssemblyVersion>1.0.7.0</AssemblyVersion>
+    <FileVersion>1.0.7.0</FileVersion>
+    <PackageReleaseNotes>Moved EventStreamProvider injection on eventhandlers from Constructor to method.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
